# dayzservermanager

./: README.md  config.yaml  example.bat  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python_build.yml
dayz_servermanager/: dzsm.py  models.py  server.py
src/: dzsm.py  models.py
tests/: test_server_config.py
