[tool.poetry]
name = "dayz-servermanager"
version = "0.1.11a2"
description = "Basic tool to manage the startup and restarting of multiple DayZ servers"
authors = ["Jeremy <loredous@loredous.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dzsm = "dayz_servermanager.dzsm:main"
